2011-05-27  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Rob Buis.

        embedded SVG object doesn't scale right
        https://bugs.webkit.org/show_bug.cgi?id=10526

        Fixes crash in svg/custom/immutable-properties.html, seen on the bots.

        * svg/SVGLength.cpp:
        (WebCore::SVGLength::determineViewport): Oops forgot to merge-in a null check before landing.

2011-05-27  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Rob Buis.

        embedded SVG object doesn't scale right
        https://bugs.webkit.org/show_bug.cgi?id=10526

        <object> tags should treat width/height on a referenced SVG as intrinsic width/height
        https://bugs.webkit.org/show_bug.cgi?id=11976

        Incorrect handling of percentage values for width/height on embedded elements
        https://bugs.webkit.org/show_bug.cgi?id=14793

        WebKit fails some WICD 1.0 core test cases
        https://bugs.webkit.org/show_bug.cgi?id=15836 (partially fixed, all 'rightsizing' tests are fixed)

        CSS 2.1: Support replaced elements with relative intrinsic sizes
        https://bugs.webkit.org/show_bug.cgai?id=15849 (partially fixed)

        SVG embedded as <object> doesn't respect width/height attributes
        https://bugs.webkit.org/show_bug.cgi?id=34972

        Explicit size of object tag ignored
        https://bugs.webkit.org/show_bug.cgi?id=37086

        Add partial support of CSS 2.1 replaced elements with intrinsic size. The feature itself is complete but has only
        been implemented for RenderPart, to support SVG content document size negotiation. It serves as starting point for a generalization, in future.
        The changes in RenderPart are a 1:1 transliteration of the spec (http://www.w3.org/TR/CSS21/visudet.html#inline-replaced-width/height, see code).

        SVG 1.1 says: